update java, improve todo app